--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>EchoScan</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" crossorigin="anonymous">
-  <link href="/styles.css" rel="stylesheet"> <!-- Custom CSS file -->
+  <link href="dist/styles.css" rel="stylesheet"> <!-- Custom CSS file -->
   <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
 </head>
 <body class="bg-gray-100 font-sans h-screen overflow-hidden">
@@ -60,6 +60,6 @@
 
   </div>
 
-  <script src="/bundle.js" defer></script>
+  <script src="dist/bundle.js" defer></script>
 </body>
 </html>
